# benchmarks

./: .gitignore  CMakeLists.txt  README.md
function_call/: native_vs_bind_vs_virtual.cpp
memory/: memory_pool_vs_native.cpp
podofo_vs_poppler/: CMakeLists.txt  podofo_vs_poppler.cpp
